fix: Print table dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -158,6 +158,16 @@
 }
 
 @media print {
+  *, *::before, *::after {
+    border-color: #E4E4E7 !important;
+  }
+  body {
+    color: #000 !important;
+    color-scheme: light #000 !important;
+  }
+  svg {
+    stroke: #000 !important;
+  }
   .no-print {
     display: none;
   }
